Upgrade to JDK 22
* Use Java Toolchains to use JDK 22 for compile/test
* Remove `--enable-preview`
* Use JDK 21 for -api and -bouncy modules (we're using a JDK 21 feature in API
  currently, we need to backport this to en earlier JDK version)
* Use JDK 21 temporarily for Kotlin examples (until Kotlin supports JDK 22)
* Use BouncySecp256k1 in the Kotlin examples (which means they won't run until Bouncy is finished) but
  they will at least compile.
* Update the extract-headers.sh script to work with JDK 22 and the latest jextract
* Update OpaqueKeyPair and Secp256k1Foreign to use the JDK 22 FFM API
* Replace the `o.b.s.f.jextract` Java files with the files generated by the latest jextract.